# unsubber

./: .gitignore  README.md  noxfile.py  pyproject.toml
src/unsubber/: browser.py
tests/: test_browser.py
