[project]
name = "unsubber"
version = "0.1.0"
description = "Unsubscribe from marketing emails."
authors = [
    {name = "Matt Koski",email = "maccam912@gmail.com"},
]
dependencies = [
    "playwright>=1.38.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
    "ruff>=0.0.291",
    "isort>=5.12.0",
    "black>=23.9.1",
    "mypy>=1.5.1",
    "nox>=2023.4.22",
]

[tool.pdm.scripts]
nox = "nox -r -x"
test = "nox -r -s tests"